--- a/numerics/src/sim/CMakeLists.txt
+++ b/numerics/src/sim/CMakeLists.txt
@@ -27,7 +27,7 @@ set(${PROJECT_NAME}_LIBS
   ${LINK_LIBS}
   CACHE INTERNAL "${PROJECT_NAME}: LIBS" FORCE)
 
-install (TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
+install (TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${LIB_INSTALL_DIR})
 install (DIRECTORY .
   DESTINATION ${INCLUDE_INSTALL_DIR}/sim
   FILES_MATCHING PATTERN "*.h"
