--- a/tools/core/src/kernel/CMakeLists.txt
+++ b/tools/core/src/kernel/CMakeLists.txt
@@ -23,6 +23,6 @@ set(${PROJECT_NAME}_LIBS
   ${LINK_LIBS}
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${LIB_INSTALL_DIR})
 install(DIRECTORY . DESTINATION include/soft5 FILES_MATCHING PATTERN "*.h")
 install(FILES Soft DESTINATION include/soft5)
