--- a/foreign/c/src/softc/CMakeLists.txt
+++ b/foreign/c/src/softc/CMakeLists.txt
@@ -22,7 +22,7 @@ set(${PROJECT_NAME}_LIBS
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
 install (TARGETS ${PROJECT_NAME}
-  LIBRARY DESTINATION lib)
+  LIBRARY DESTINATION ${LIB_INSTALL_DIR})
 
 install(DIRECTORY .
   DESTINATION ${INCLUDE_INSTALL_DIR}/${PROJECT_NAME}
