--- a/tools/src/plugins/hsm/CMakeLists.txt
+++ b/tools/src/plugins/hsm/CMakeLists.txt
@@ -19,4 +19,4 @@ add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${LIB_INSTALL_DIR})
