--- a/tools/src/forge/CMakeLists.txt
+++ b/tools/src/forge/CMakeLists.txt
@@ -1,5 +1,5 @@
 project (forge)
 
 install (FILES soft-forge soft-register-entity soft-search-entity
-  PERMISSIONS WORLD_READ WORLD_EXECUTE
+  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE  WORLD_READ WORLD_EXECUTE
   DESTINATION bin)
