--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -758,7 +758,8 @@ INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/frontpage.md \
                          @CMAKE_CURRENT_SOURCE_DIR@/../storage \
 			 @CMAKE_CURRENT_SOURCE_DIR@/../foreign \
 			 @CMAKE_CURRENT_SOURCE_DIR@/../numerics \
-			 @CMAKE_CURRENT_SOURCE_DIR@/../tools
+			 @CMAKE_CURRENT_SOURCE_DIR@/../tools \
+			 @CMAKE_CURRENT_BINARY_DIR@/softpy.py
 
 #  This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
