Cleanup, moved all swig typemaps to a separate file

--- a/foreign/python/src/softpy/CMakeLists.txt
+++ b/foreign/python/src/softpy/CMakeLists.txt
@@ -20,6 +20,7 @@ set(CMAKE_SWIG_FLAGS "")
 
 set(SWIG_MODULE_softpy_EXTRA_DEPS
   numpy.i
+  softpy-typemaps.i
   softpy-entity.i
   softpy-datamodel.i
   softpy-python.i
