Commented out datamodel_append_blob()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,7 +186,7 @@ if (WITH_FOREIGN_PYTHON)
   if (USE_PYTHON3)
     set(Python_ADDITIONAL_VERSIONS 3.6 3.5 3.4 3.3 3.2)
   else (USE_PYTHON3)
-    set(Python_ADDITIONAL_VERSIONS 2.7 2.6 2.5)
+    set(Python_ADDITIONAL_VERSIONS 2.7)
   endif (USE_PYTHON3)
   add_subdirectory(foreign/python/src/softpy)
   if (WITH_TESTS)
