SOFT-39 WIP for making the json plugin plugin work with an actual data model and JSON file as output.

--- a/porto/src/json/CMakeLists.txt
+++ b/porto/src/json/CMakeLists.txt
@@ -6,13 +6,18 @@ set (CMAKE_AUTOMOC TRUE)
 find_package(Qt5Core REQUIRED)
 
 set(${PROJECT_NAME}_INCLUDE_DIRS
+  ${soft-kernel_INCLUDE_DIRS}
+  ${soft-storage-plugin-json_INCLUDE_DIRS}
   ${softc_INCLUDE_DIRS}
   ${PROJECT_SOURCE_DIR}
   CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
 
 include_directories (${porto-json_INCLUDE_DIRS})
 
-set (LINK_LIBS Qt5::Core ${softc_LIBS})
+set (LINK_LIBS Qt5::Core 
+  ${softc_LIBS} 
+  ${soft-storage-plugin-json_LIBS}
+  ${soft-kernel_LIBS})
 
 aux_source_directory (. SRC_LIST)
 add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
