--- a/storage/src/plugins/external/CMakeLists.txt
+++ b/storage/src/plugins/external/CMakeLists.txt
@@ -13,4 +13,15 @@ add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
 
+set(${PROJECT_NAME}_INCLUDE_DIRS
+  ${PROJECT_SOURCE_DIR}
+  ${soft-kernel_INCLUDE_DIRS}
+  CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
+
+set(${PROJECT_NAME}_LIBS
+  ${PROJECT_NAME}
+  ${LINK_LIBS}
+  CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
+
+
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
