--- a/storage/test/plugins/external/CMakeLists.txt
+++ b/storage/test/plugins/external/CMakeLists.txt
@@ -21,7 +21,8 @@ if(GTEST_FOUND)
 
   if(UNIX)
     set_property(TEST ${PROJECT_NAME} PROPERTY
-      ENVIRONMENT "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH}")
+      ENVIRONMENT "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH}"
+      ENVIRONMENT "SOFTSTORAGE=$ENV{SOFTSTORAGE}:${soft-storage-plugins-external_BINARY_DIR}")
   else()
     set_property(TEST ${PROJECT_NAME} PROPERTY
       ENVIRONMENT "PATH=${PATH}:$ENV{PATH}")
