--- a/storage/test/plugins/external/entities/CMakeLists.txt
+++ b/storage/test/plugins/external/entities/CMakeLists.txt
@@ -7,7 +7,7 @@ set (SRC_LIST ${SRC_LIST})
 # Run a json entity through the soft-forge code generator to create
 # a header and source file
 function (add_forge entity output_src output_hdr)
-  message("outp: ${entity} ${output_src} ${output_hdr}")
+#  message("outp: ${entity} ${output_src} ${output_hdr}")
   add_custom_command(
     OUTPUT ${output_hdr}
     COMMAND soft-forge ${entity} ${C_HEADER_TEMPLATE} ${output_hdr}
@@ -26,10 +26,10 @@ endfunction()
 # soft-forge
 FILE(GLOB json-sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.json)
 foreach(JSON_SRC ${json-sources})
-  message("${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC}")
+#  message("${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC}")
   string(REGEX REPLACE "\.json$" ".c" GEN_SRC ${JSON_SRC})
   string(REGEX REPLACE "\.json$" ".h" GEN_HDR ${JSON_SRC})
-  message("${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC} - ${GEN_SRC}")		
+#  message("${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC} - ${GEN_SRC}")		
   add_forge(${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC}
     ${plot-entities_BINARY_DIR}/${GEN_SRC}
     ${plot-entities_BINARY_DIR}/${GEN_HDR})
