Set SOFTSTORAGE env path in test to use correct hdf5-strategy

--- a/foreign/c/test/softc/CMakeLists.txt
+++ b/foreign/c/test/softc/CMakeLists.txt
@@ -21,6 +21,9 @@ if(GTEST_FOUND)
       ENVIRONMENT "PATH=${PATH}:$ENV{PATH}")
   endif()
  
+  set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
+    ENVIRONMENT "SOFTSTORAGE=${SOFTSTORAGE}:$ENV{SOFTSTORAGE}")
+
 else(GTEST_FOUND)
   message("Google test not found - skipping tests")
 endif(GTEST_FOUND)
