--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ find_package (Qt5Concurrent REQUIRED)
 set (CMAKE_THREAD_PREFER_PTHREAD  TRUE)
 set (CMAKE_INCLUDE_CURRENT_DIR    ON)
 set (CMAKE_AUTOMOC                ON)
+set (SOFT_ROOTDIR ${CMAKE_SOURCE_DIR})
 
 if (WITH_PLUGIN_HD5 OR WITH_STORAGE_HD5)
   find_package(HDF5 REQUIRED)
@@ -215,14 +216,14 @@ if (WITH_NUMERICS)
 endif (WITH_NUMERICS)
 
 if (WITH_PORTO)
-  add_subdirectory(porto/src/json)
-  if (WITH_TESTS)
-    add_subdirectory(porto/test/json)
-  endif (WITH_TESTS)
-
+  add_subdirectory(porto/src/entities)
+  add_subdirectory(porto/src/json) 
   add_subdirectory(porto/src/thirdParty/chemkinReader)
-  if (WITH_TESTS)
+  
+ if (WITH_TESTS)
+    add_subdirectory(porto/test/json)
     add_subdirectory(porto/test/thirdParty/chemkinReader)
+    add_subdirectory(porto/test/parscale)
   endif (WITH_TESTS)
 
 endif (WITH_PORTO)
