Updated examples, code generators and plugins to use the new C++ code generators

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,9 +217,9 @@ if (WITH_NUMERICS)
 endif (WITH_NUMERICS)
 
 if (WITH_PORTO)
-#  add_subdirectory(porto/src/json)
+  add_subdirectory(porto/src/json)
   if (WITH_TESTS)
-#    add_subdirectory(porto/test/json)
+    add_subdirectory(porto/test/json)
     add_subdirectory(porto/test/codegen)
   endif (WITH_TESTS)
 endif (WITH_PORTO)
