--- a/porto/src/json/CMakeLists.txt
+++ b/porto/src/json/CMakeLists.txt
@@ -8,13 +8,15 @@ find_package(Qt5Core REQUIRED)
 set(${PROJECT_NAME}_INCLUDE_DIRS
   ${soft-kernel_INCLUDE_DIRS}
   ${softc_INCLUDE_DIRS}
+  ${porto-codegen-entities_INCLUDE_DIRS}
   ${PROJECT_SOURCE_DIR}
   CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
-
-include_directories (${porto-json_INCLUDE_DIRS})
+  
+include_directories (${porto-json_INCLUDE_DIRS}  ${porto-codegen-entities_INCLUDE_DIRS})
 
 set (LINK_LIBS Qt5::Core 
   ${softc_LIBS} 
+  ${porto-codegen-entities_LIBS}
   ${soft-kernel_LIBS})
 
 aux_source_directory (. SRC_LIST)
