Added new mongostrategy skeleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,7 @@ endif (WITH_STORAGE_HD5)
 if (WITH_STORAGE_MONGO)
   add_subdirectory(storage/src/mongo)
   add_subdirectory(storage/src/plugins/mongo)
+  add_subdirectory(storage/src/plugins/mongo2)
   if (WITH_TESTS)
     add_subdirectory(storage/test/mongo)
     add_subdirectory(storage/test/plugins/mongo)
