--- a/porto/src/entities/CMakeLists.txt
+++ b/porto/src/entities/CMakeLists.txt
@@ -6,12 +6,13 @@ set (SRC_LIST ${SRC_LIST})
 set (ENTITY_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set (C_SOURCE_TEMPLATE ${CMAKE_CURRENT_SOURCE_DIR}/../templates/ccode.cjs)
 set (C_HEADER_TEMPLATE ${CMAKE_CURRENT_SOURCE_DIR}/../templates/ccode.hjs)
+set (CPP_SOURCE_TEMPLATE ${CMAKE_CURRENT_SOURCE_DIR}/../templates/cppcode.cjs)
+set (CPP_HEADER_TEMPLATE ${CMAKE_CURRENT_SOURCE_DIR}/../templates/cppcode.hjs)
 
 # Run a json entity through the soft-forge code generator to create
-# a header and source file
-function (add_forge entity output_src output_hdr)
-  message("Running command soft-forge ${entity} ${C_HEADER_TEMPLATE} ${output_hdr}")
-  add_custom_command(
+# a header and source fil
+function (add_forge entity output_src output_hdr output_cppsrc output_cpphdr)  
+  add_custom_command(    
     OUTPUT ${output_hdr}
     COMMAND SOFT_MODULES=${softshell_MODULES_DIR} soft-forge ${entity} ${C_HEADER_TEMPLATE} ${output_hdr}
     DEPENDS ${entity} ${C_HEADER_TEMPLATE}
@@ -22,21 +23,37 @@ function (add_forge entity output_src output_hdr)
     COMMAND SOFT_MODULES=${softshell_MODULES_DIR} soft-forge ${entity} ${C_SOURCE_TEMPLATE} ${output_src}
     DEPENDS ${entity} ${C_SOURCE_TEMPLATE} ${output_hdr}
     )
+
+  add_custom_command(    
+    OUTPUT ${output_cpphdr}
+    COMMAND SOFT_MODULES=${softshell_MODULES_DIR} soft-forge ${entity} ${CPP_HEADER_TEMPLATE} ${output_cpphdr}
+    DEPENDS ${entity} ${CPP_HEADER_TEMPLATE}
+    )
+
+  add_custom_command(
+    OUTPUT ${output_cppsrc}
+    COMMAND SOFT_MODULES=${softshell_MODULES_DIR} soft-forge ${entity} ${CPP_SOURCE_TEMPLATE} ${output_cppsrc}
+    DEPENDS ${entity} ${CPP_SOURCE_TEMPLATE} ${output_cpphdr}
+    )
 endfunction()
 
 
 # Find all .json files in current source dir and run through
 # soft-forge
 FILE(GLOB json-sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.json)
-foreach(JSON_SRC ${json-sources})
- 
+foreach(JSON_SRC ${json-sources}) 
   string(REGEX REPLACE "\.json$" ".c" GEN_SRC ${JSON_SRC})
   string(REGEX REPLACE "\.json$" ".h" GEN_HDR ${JSON_SRC})
+  string(REGEX REPLACE "\.json$" ".cxx" GEN_CPPSRC ${JSON_SRC})
+  string(REGEX REPLACE "\.json$" ".hxx" GEN_CPPHDR ${JSON_SRC})
   add_forge(${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC}
     ${${PROJECT_NAME}_BINARY_DIR}/${GEN_SRC}
-    ${${PROJECT_NAME}_BINARY_DIR}/${GEN_HDR})
+    ${${PROJECT_NAME}_BINARY_DIR}/${GEN_HDR}
+    ${${PROJECT_NAME}_BINARY_DIR}/${GEN_CPPSRC}
+    ${${PROJECT_NAME}_BINARY_DIR}/${GEN_CPPHDR})
 
   list(APPEND SRC_LIST ${GEN_SRC})  
+  list(APPEND SRC_LIST ${GEN_CPPSRC})  
 endforeach(JSON_SRC ${json-sources})
 
 set_source_files_properties(${SRC_LIST} PROPERTIES GENERATED TRUE)
