--- a/porto/src/json/CMakeLists.txt
+++ b/porto/src/json/CMakeLists.txt
@@ -12,11 +12,12 @@ set(${PROJECT_NAME}_INCLUDE_DIRS
   ${PROJECT_SOURCE_DIR}
   CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
   
-include_directories (${PROJECT_NAME} ${porto-json_INCLUDE_DIRS}  ${porto-codegen-entities_INCLUDE_DIRS})
+include_directories (${PROJECT_NAME} ${porto-json_INCLUDE_DIRS}  ${porto-codegen-entities_INCLUDE_DIRS} ${porto-entities_INCLUDE_DIRS})
 
 set (LINK_LIBS Qt5::Core 
   ${softc_LIBS} 
   ${porto-codegen-entities_LIBS}
+  ${porto-entities_LIBS}
   ${soft-kernel_LIBS})
 
 aux_source_directory (. SRC_LIST)
