--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,14 +228,16 @@ if (WITH_PORTO)
   add_subdirectory(porto/src/entities)
   add_subdirectory(porto/src/thirdParty/chemkinReader)
   add_subdirectory(porto/test/codegen)
-  add_subdirectory(porto/src/json) 
+  add_subdirectory(porto/src/json)
+  add_subdirectory(porto/src/chemkin) 
   add_subdirectory(porto/src/dft-prepare)
   add_subdirectory(porto/src/remark-wrapper)
   
  if (WITH_TESTS)
-    add_subdirectory(porto/test/json)
-    add_subdirectory(porto/test/thirdParty/chemkinReader)
-    add_subdirectory(porto/test/parscale)  
+   add_subdirectory(porto/test/json)
+   add_subdirectory(porto/test/chemkin)
+   add_subdirectory(porto/test/thirdParty/chemkinReader)
+   add_subdirectory(porto/test/parscale)  
  endif (WITH_TESTS)
 
 endif (WITH_PORTO)
