--- a/porto/src/json/CMakeLists.txt
+++ b/porto/src/json/CMakeLists.txt
@@ -24,8 +24,6 @@ aux_source_directory (. SRC_LIST)
 add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
-
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
 
-# TODO: This needs a specified PORTO_INSTALL_DIR -- where is this defined?
-# install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${PORTO_INSTALL_DIR})
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
