Initial version of softshell plugin to handle generic storage and entities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ option (WITH_PLUGIN_GSL "Compile GSL plugin"              ON)
 option (WITH_PLUGIN_NLOPT "Compile NLOpt plugin"          ON)
 option (WITH_PLUGIN_HD5 "Compile HD5 plugin"              ON)
 option (WITH_PLUGIN_MONGO "Compile HD5 plugin"            ON)
+option (WITH_PLUGIN_SOFT_KERNEL "Compile kernel plugin"   ON)
 option (WITH_FOREIGN_C "Compile with C API"               ON)
 option (WITH_FOREIGN_FORTRAN "Compile with Fortran API"   OFF)
 option (WITH_FOREIGN_PYTHON "Compile with Python API"     OFF)
@@ -175,6 +176,10 @@ endif(WITH_PLUGIN_NLOPT)
 if (WITH_PLUGIN_HD5)
   add_subdirectory(tools/src/plugins/hdf5)
 endif(WITH_PLUGIN_HD5)
+
+if (WITH_PLUGIN_SOFT_KERNEL)
+  add_subdirectory(tools/src/plugins/soft-kernel)
+endif(WITH_PLUGIN_SOFT_KERNEL)
 
 if (WITH_HSM)
   add_subdirectory(tools/src/plugins/hsm)
