--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,9 +232,11 @@ if (WITH_PORTO)
 
   add_subdirectory(porto/src/entities)
   add_subdirectory(porto/src/thirdParty/chemkinReader)
+  add_subdirectory(porto/src/thirdParty/remarcReader)
   add_subdirectory(porto/test/codegen)
   add_subdirectory(porto/src/json)
-  add_subdirectory(porto/src/chemkin) 
+  add_subdirectory(porto/src/chemkin)
+  add_subdirectory(porto/src/remarkinit) 
   add_subdirectory(porto/src/dft-prepare)
   add_subdirectory(porto/src/remark-wrapper)
   
@@ -242,6 +244,7 @@ if (WITH_PORTO)
    add_subdirectory(porto/test/json)
    add_subdirectory(porto/test/chemkin)
    add_subdirectory(porto/test/thirdParty/chemkinReader)
+   add_subdirectory(porto/test/thirdParty/remarcReader)
    add_subdirectory(porto/test/parscale)  
  endif (WITH_TESTS)
 
