Added REMARC init reexternal plugin read/write test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -243,6 +243,7 @@ if (WITH_PORTO)
  if (WITH_TESTS)
    add_subdirectory(porto/test/json)
    add_subdirectory(porto/test/chemkin)
+   add_subdirectory(porto/test/remarkinit)
    add_subdirectory(porto/test/thirdParty/chemkinReader)
    add_subdirectory(porto/test/thirdParty/remarcReader)
    add_subdirectory(porto/test/parscale)  
