--- a/tools/src/plugins/soft-kernel/CMakeLists.txt
+++ b/tools/src/plugins/soft-kernel/CMakeLists.txt
@@ -12,12 +12,24 @@ include_directories (
   "../common"
   )
 
-set (LINK_LIBS ${LINK_LIBS} ${soft-kernel_LIBS})
+set (LINK_LIBS ${LINK_LIBS}
+  ${soft-kernel_LIBS})
 aux_source_directory (. SRC_LIST)
 add_definitions (-DQT_PLUGIN)
 add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
+
+set(${PROJECT_NAME}_INCLUDE_DIRS
+  ${PROJECT_SOURCE_DIR}
+  ${soft-kernel_INCLUDE_DIRS}
+  "${PROJECT_SOURCE_DIR}/../common"
+  CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
+
+set(${PROJECT_NAME}_LIBS
+  ${PROJECT_NAME}
+  ${LINK_LIBS}
+  CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR})
