Added initial porto workflow tutorial doc. Added new entity javascript autogenerator for softshell. Fixed bugs in qstorage script entity. Added xyreader skeleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -236,10 +236,12 @@ if (WITH_PORTO)
   add_subdirectory(porto/src/entities)
   add_subdirectory(porto/src/thirdParty/chemkinReader)
   add_subdirectory(porto/src/thirdParty/remarcReader)
+  add_subdirectory(porto/src/thirdParty/xyReader)
   add_subdirectory(porto/test/codegen)
   add_subdirectory(porto/src/json)
   add_subdirectory(porto/src/chemkin)
-  add_subdirectory(porto/src/remarkinit) 
+  add_subdirectory(porto/src/remarkinit)
+  add_subdirectory(porto/src/xyplot)
   add_subdirectory(porto/src/dft-prepare)
   add_subdirectory(porto/src/remark-wrapper)
   
@@ -247,6 +249,7 @@ if (WITH_PORTO)
    add_subdirectory(porto/test/json)
    add_subdirectory(porto/test/chemkin)
    add_subdirectory(porto/test/remarkinit)
+#    add_subdirectory(porto/test/xyplot)
    add_subdirectory(porto/test/thirdParty/chemkinReader)
    add_subdirectory(porto/test/thirdParty/remarcReader)
    add_subdirectory(porto/test/parscale)  
