Updated wrapper plugin

--- a/porto/test/chemkin/CMakeLists.txt
+++ b/porto/test/chemkin/CMakeLists.txt
@@ -34,7 +34,7 @@ if(GTEST_FOUND)
   endif()
 
   set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
-    ENVIRONMENT "SOFTSTORAGE=${SOFTSTORAGE}:${porto-chemkin_BINARY_DIR}$ENV{SOFTSTORAGE}")
+    ENVIRONMENT "SOFTSTORAGE=${SOFTSTORAGE}:${porto-chemkin_BINARY_DIR}:$ENV{SOFTSTORAGE}")
 
  
 else(GTEST_FOUND)
