--- a/porto/src/chemkin/CMakeLists.txt
+++ b/porto/src/chemkin/CMakeLists.txt
@@ -4,6 +4,8 @@ set (CMAKE_THREAD_PREFER_PTHREAD  TRUE)
 set (CMAKE_INCLUDE_CURRENT_DIR ON)
 set (CMAKE_AUTOMOC TRUE)
 
+find_package(Qt5Core REQUIRED)
+
 include_directories (${PROJECT_NAME}
   ${porto-entities_INCLUDE_DIRS}
   ${porto-chemkinreader_INCLUDE_DIRS}
@@ -30,4 +32,4 @@ set(${PROJECT_NAME}_LIBS
   ${LINK_LIBS}
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
+install(TARGETS ${PROJECT_NAME} DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
